--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer>
-  Copyright © 2019 Yuki Wu <a href="https://wuyuki.github.io/">Yuki Wu's Blog</a> - Powered by Jekyll.
+  Copyright © 2019 Herm <a href="https://zhqherm.github.io/">Herm's Blog</a> - Powered by Jekyll.
 </footer>
 <div align="center">
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
